; ModuleID = '/home/carl/AnghaBench/RetroArch/audio/drivers/extr_tinyalsa.c_pcm_frames_to_bytes.c'
source_filename = "/home/carl/AnghaBench/RetroArch/audio/drivers/extr_tinyalsa.c_pcm_frames_to_bytes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pcm = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pcm*, i32)* @pcm_frames_to_bytes to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pcm_frames_to_bytes(%struct.pcm* %0, i32 %1) #0 {
  %3 = alloca %struct.pcm*, align 8
  %4 = alloca i32, align 4
  store %struct.pcm* %0, %struct.pcm** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.pcm*, %struct.pcm** %3, align 8
  %7 = getelementptr inbounds %struct.pcm, %struct.pcm* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = mul i32 %5, %9
  %11 = load %struct.pcm*, %struct.pcm** %3, align 8
  %12 = getelementptr inbounds %struct.pcm, %struct.pcm* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @pcm_format_to_bits(i32 %14)
  %16 = ashr i32 %15, 3
  %17 = mul i32 %10, %16
  ret i32 %17
}

declare dso_local i32 @pcm_format_to_bits(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
